syntax = "proto3";

package services.app;

option go_package = "scowd/protos/gen/api/application;apiv1";

import "google/protobuf/timestamp.proto";

message SubmissionInfo {
  string user_id = 1;
  string cluster = 2;
  string app_id = 3;
  string app_name =4;
  string account = 5;
  optional string partition = 6;
  optional string qos = 7;
  uint32 core_count = 8;
  uint32 max_time = 9;
  google.protobuf.Timestamp submit_time = 10;
  map<string, string> custom_attributes = 11;
  uint32 node_count = 12;
  optional uint32 gpu_count = 13;
}

message GetAppLastSubmissionRequest {
  string user_id = 1;
  string file_path = 2;
}

message GetAppLastSubmissionResponse {
  SubmissionInfo file_data = 1;
}


service AppService {
  rpc GetAppLastSubmission(GetAppLastSubmissionRequest) returns (GetAppLastSubmissionResponse) {}
}
